ios/chromaprint.framework/Headers/chromaprint.h

struct ChromaprintContextPrivate;
typedef struct ChromaprintContextPrivate ChromaprintContext;
enum ChromaprintAlgorithm {
	CHROMAPRINT_ALGORITHM_TEST1 = 0,
	CHROMAPRINT_ALGORITHM_TEST2,
	CHROMAPRINT_ALGORITHM_TEST3,
	CHROMAPRINT_ALGORITHM_TEST4,                   // removes leading silence
	CHROMAPRINT_ALGORITHM_TEST5,
	CHROMAPRINT_ALGORITHM_DEFAULT = CHROMAPRINT_ALGORITHM_TEST2,
};
/**
 * Return the version number of Chromaprint.
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) const char *chromaprint_get_version(void);
/**
 * Allocate and initialize the Chromaprint context.
 *
 * Note that when Chromaprint is compiled with FFTW, this function is
 * not reentrant and you need to call it only from one thread at a time.
 * This is not a problem when using FFmpeg or vDSP.
 *
 * @param algorithm the fingerprint algorithm version you want to use, or
 *		CHROMAPRINT_ALGORITHM_DEFAULT for the default algorithm
 *
 * @return ctx Chromaprint context pointer
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) ChromaprintContext *chromaprint_new(int algorithm);
/**
 * Deallocate the Chromaprint context.
 *
 * Note that when Chromaprint is compiled with FFTW, this function is
 * not reentrant and you need to call it only from one thread at a time.
 * This is not a problem when using FFmpeg or vDSP.
 *
 * @param[in] ctx Chromaprint context pointer
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) void chromaprint_free(ChromaprintContext *ctx);
/**
 * Return the fingerprint algorithm this context is configured to use.
 * @param[in] ctx Chromaprint context pointer
 * @return current algorithm version
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) int chromaprint_get_algorithm(ChromaprintContext *ctx);
/**
 * Set a configuration option for the selected fingerprint algorithm.
 *
 * DO NOT USE THIS FUNCTION IF YOU ARE PLANNING TO USE
 * THE GENERATED FINGERPRINTS WITH THE ACOUSTID SERVICE.
 *
 * Possible options:
 *  - silence_threshold: threshold for detecting silence, 0-32767
 *
 * @param[in] ctx Chromaprint context pointer
 * @param[in] name option name
 * @param[in] value option value
 *
 * @return 0 on error, 1 on success
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) int chromaprint_set_option(ChromaprintContext *ctx, const char *name, int value);
/**
 * Get the number of channels that is internally used for fingerprinting.
 *
 * @note You normally don't need this. Just set the audio's actual number of channels
 * when calling chromaprint_start() and everything will work. This is only used for
 * certain optimized cases to control the audio source.
 *
 * @param[in] ctx Chromaprint context pointer
 *
 * @return number of channels
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) int chromaprint_get_num_channels(ChromaprintContext *ctx);
/**
 * Get the sampling rate that is internally used for fingerprinting.
 *
 * @note You normally don't need this. Just set the audio's actual number of channels
 * when calling chromaprint_start() and everything will work. This is only used for
 * certain optimized cases to control the audio source.
 *
 * @param[in] ctx Chromaprint context pointer
 *
 * @return sampling rate
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) int chromaprint_get_sample_rate(ChromaprintContext *ctx);
/**
 * Get the duration of one item in the raw fingerprint in samples.
 *
 * @param[in] ctx Chromaprint context pointer
 *
 * @return duration in samples
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) int chromaprint_get_item_duration(ChromaprintContext *ctx);
/**
 * Get the duration of one item in the raw fingerprint in milliseconds.
 *
 * @param[in] ctx Chromaprint context pointer
 *
 * @return duration in milliseconds
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) int chromaprint_get_item_duration_ms(ChromaprintContext *ctx);
/**
 * Get the duration of internal buffers that the fingerprinting algorithm uses.
 *
 * @param[in] ctx Chromaprint context pointer
 *
 * @return duration in samples
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) int chromaprint_get_delay(ChromaprintContext *ctx);
/**
 * Get the duration of internal buffers that the fingerprinting algorithm uses.
 *
 * @param[in] ctx Chromaprint context pointer
 *
 * @return duration in milliseconds
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) int chromaprint_get_delay_ms(ChromaprintContext *ctx);
/**
 * Restart the computation of a fingerprint with a new audio stream.
 *
 * @param[in] ctx Chromaprint context pointer
 * @param[in] sample_rate sample rate of the audio stream (in Hz)
 * @param[in] num_channels numbers of channels in the audio stream (1 or 2)
 *
 * @return 0 on error, 1 on success
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) int chromaprint_start(ChromaprintContext *ctx, int sample_rate, int num_channels);
/**
 * Send audio data to the fingerprint calculator.
 *
 * @param[in] ctx Chromaprint context pointer
 * @param[in] data raw audio data, should point to an array of 16-bit signed
 *          integers in native byte-order
 * @param[in] size size of the data buffer (in samples)
 *
 * @return 0 on error, 1 on success
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) int chromaprint_feed(ChromaprintContext *ctx, const int16_t *data, int size);
/**
 * Process any remaining buffered audio data.
 *
 * @param[in] ctx Chromaprint context pointer
 *
 * @return 0 on error, 1 on success
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) int chromaprint_finish(ChromaprintContext *ctx);
/**
 * Return the calculated fingerprint as a compressed string.
 *
 * The caller is responsible for freeing the returned pointer using
 * chromaprint_dealloc().
 *
 * @param[in] ctx Chromaprint context pointer
 * @param[out] fingerprint pointer to a pointer, where a pointer to the allocated array
 *                 will be stored
 *
 * @return 0 on error, 1 on success
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) int chromaprint_get_fingerprint(ChromaprintContext *ctx, char **fingerprint);
/**
 * Free memory allocated by any function from the Chromaprint API.
 *
 * @param ptr pointer to be deallocated
 */
extern "C" __attribute__((visibility("default"))) __attribute__((used)) void chromaprint_dealloc(void *ptr);