lib/chromaprint_native.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

class NativeLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibrary(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeLibrary.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Return the version number of Chromaprint.
  ffi.Pointer<ffi.Char> chromaprint_get_version() {
    return _chromaprint_get_version();
  }

  late final _chromaprint_get_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'chromaprint_get_version');
  late final _chromaprint_get_version = _chromaprint_get_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Allocate and initialize the Chromaprint context.
  ///
  /// Note that when Chromaprint is compiled with FFTW, this function is
  /// not reentrant and you need to call it only from one thread at a time.
  /// This is not a problem when using FFmpeg or vDSP.
  ///
  /// @param algorithm the fingerprint algorithm version you want to use, or
  /// CHROMAPRINT_ALGORITHM_DEFAULT for the default algorithm
  ///
  /// @return ctx Chromaprint context pointer
  ffi.Pointer<ChromaprintContext> chromaprint_new(
    int algorithm,
  ) {
    return _chromaprint_new(
      algorithm,
    );
  }

  late final _chromaprint_newPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<ChromaprintContext> Function(ffi.Int)>>(
      'chromaprint_new');
  late final _chromaprint_new = _chromaprint_newPtr
      .asFunction<ffi.Pointer<ChromaprintContext> Function(int)>();

  /// Deallocate the Chromaprint context.
  ///
  /// Note that when Chromaprint is compiled with FFTW, this function is
  /// not reentrant and you need to call it only from one thread at a time.
  /// This is not a problem when using FFmpeg or vDSP.
  ///
  /// @param[in] ctx Chromaprint context pointer
  void chromaprint_free(
    ffi.Pointer<ChromaprintContext> ctx,
  ) {
    return _chromaprint_free(
      ctx,
    );
  }

  late final _chromaprint_freePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ChromaprintContext>)>>(
      'chromaprint_free');
  late final _chromaprint_free = _chromaprint_freePtr
      .asFunction<void Function(ffi.Pointer<ChromaprintContext>)>();

  /// Return the fingerprint algorithm this context is configured to use.
  /// @param[in] ctx Chromaprint context pointer
  /// @return current algorithm version
  int chromaprint_get_algorithm(
    ffi.Pointer<ChromaprintContext> ctx,
  ) {
    return _chromaprint_get_algorithm(
      ctx,
    );
  }

  late final _chromaprint_get_algorithmPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ChromaprintContext>)>>(
      'chromaprint_get_algorithm');
  late final _chromaprint_get_algorithm = _chromaprint_get_algorithmPtr
      .asFunction<int Function(ffi.Pointer<ChromaprintContext>)>();

  /// Set a configuration option for the selected fingerprint algorithm.
  ///
  /// DO NOT USE THIS FUNCTION IF YOU ARE PLANNING TO USE
  /// THE GENERATED FINGERPRINTS WITH THE ACOUSTID SERVICE.
  ///
  /// Possible options:
  /// - silence_threshold: threshold for detecting silence, 0-32767
  ///
  /// @param[in] ctx Chromaprint context pointer
  /// @param[in] name option name
  /// @param[in] value option value
  ///
  /// @return 0 on error, 1 on success
  int chromaprint_set_option(
    ffi.Pointer<ChromaprintContext> ctx,
    ffi.Pointer<ffi.Char> name,
    int value,
  ) {
    return _chromaprint_set_option(
      ctx,
      name,
      value,
    );
  }

  late final _chromaprint_set_optionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ChromaprintContext>,
              ffi.Pointer<ffi.Char>, ffi.Int)>>('chromaprint_set_option');
  late final _chromaprint_set_option = _chromaprint_set_optionPtr.asFunction<
      int Function(
          ffi.Pointer<ChromaprintContext>, ffi.Pointer<ffi.Char>, int)>();

  /// Get the number of channels that is internally used for fingerprinting.
  ///
  /// @note You normally don't need this. Just set the audio's actual number of channels
  /// when calling chromaprint_start() and everything will work. This is only used for
  /// certain optimized cases to control the audio source.
  ///
  /// @param[in] ctx Chromaprint context pointer
  ///
  /// @return number of channels
  int chromaprint_get_num_channels(
    ffi.Pointer<ChromaprintContext> ctx,
  ) {
    return _chromaprint_get_num_channels(
      ctx,
    );
  }

  late final _chromaprint_get_num_channelsPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ChromaprintContext>)>>(
      'chromaprint_get_num_channels');
  late final _chromaprint_get_num_channels = _chromaprint_get_num_channelsPtr
      .asFunction<int Function(ffi.Pointer<ChromaprintContext>)>();

  /// Get the sampling rate that is internally used for fingerprinting.
  ///
  /// @note You normally don't need this. Just set the audio's actual number of channels
  /// when calling chromaprint_start() and everything will work. This is only used for
  /// certain optimized cases to control the audio source.
  ///
  /// @param[in] ctx Chromaprint context pointer
  ///
  /// @return sampling rate
  int chromaprint_get_sample_rate(
    ffi.Pointer<ChromaprintContext> ctx,
  ) {
    return _chromaprint_get_sample_rate(
      ctx,
    );
  }

  late final _chromaprint_get_sample_ratePtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ChromaprintContext>)>>(
      'chromaprint_get_sample_rate');
  late final _chromaprint_get_sample_rate = _chromaprint_get_sample_ratePtr
      .asFunction<int Function(ffi.Pointer<ChromaprintContext>)>();

  /// Get the duration of one item in the raw fingerprint in samples.
  ///
  /// @param[in] ctx Chromaprint context pointer
  ///
  /// @return duration in samples
  int chromaprint_get_item_duration(
    ffi.Pointer<ChromaprintContext> ctx,
  ) {
    return _chromaprint_get_item_duration(
      ctx,
    );
  }

  late final _chromaprint_get_item_durationPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ChromaprintContext>)>>(
      'chromaprint_get_item_duration');
  late final _chromaprint_get_item_duration = _chromaprint_get_item_durationPtr
      .asFunction<int Function(ffi.Pointer<ChromaprintContext>)>();

  /// Get the duration of one item in the raw fingerprint in milliseconds.
  ///
  /// @param[in] ctx Chromaprint context pointer
  ///
  /// @return duration in milliseconds
  int chromaprint_get_item_duration_ms(
    ffi.Pointer<ChromaprintContext> ctx,
  ) {
    return _chromaprint_get_item_duration_ms(
      ctx,
    );
  }

  late final _chromaprint_get_item_duration_msPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ChromaprintContext>)>>(
      'chromaprint_get_item_duration_ms');
  late final _chromaprint_get_item_duration_ms =
      _chromaprint_get_item_duration_msPtr
          .asFunction<int Function(ffi.Pointer<ChromaprintContext>)>();

  /// Get the duration of internal buffers that the fingerprinting algorithm uses.
  ///
  /// @param[in] ctx Chromaprint context pointer
  ///
  /// @return duration in samples
  int chromaprint_get_delay(
    ffi.Pointer<ChromaprintContext> ctx,
  ) {
    return _chromaprint_get_delay(
      ctx,
    );
  }

  late final _chromaprint_get_delayPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ChromaprintContext>)>>(
      'chromaprint_get_delay');
  late final _chromaprint_get_delay = _chromaprint_get_delayPtr
      .asFunction<int Function(ffi.Pointer<ChromaprintContext>)>();

  /// Get the duration of internal buffers that the fingerprinting algorithm uses.
  ///
  /// @param[in] ctx Chromaprint context pointer
  ///
  /// @return duration in milliseconds
  int chromaprint_get_delay_ms(
    ffi.Pointer<ChromaprintContext> ctx,
  ) {
    return _chromaprint_get_delay_ms(
      ctx,
    );
  }

  late final _chromaprint_get_delay_msPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ChromaprintContext>)>>(
      'chromaprint_get_delay_ms');
  late final _chromaprint_get_delay_ms = _chromaprint_get_delay_msPtr
      .asFunction<int Function(ffi.Pointer<ChromaprintContext>)>();

  /// Restart the computation of a fingerprint with a new audio stream.
  ///
  /// @param[in] ctx Chromaprint context pointer
  /// @param[in] sample_rate sample rate of the audio stream (in Hz)
  /// @param[in] num_channels numbers of channels in the audio stream (1 or 2)
  ///
  /// @return 0 on error, 1 on success
  int chromaprint_start(
    ffi.Pointer<ChromaprintContext> ctx,
    int sample_rate,
    int num_channels,
  ) {
    return _chromaprint_start(
      ctx,
      sample_rate,
      num_channels,
    );
  }

  late final _chromaprint_startPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ChromaprintContext>, ffi.Int,
              ffi.Int)>>('chromaprint_start');
  late final _chromaprint_start = _chromaprint_startPtr
      .asFunction<int Function(ffi.Pointer<ChromaprintContext>, int, int)>();

  /// Send audio data to the fingerprint calculator.
  ///
  /// @param[in] ctx Chromaprint context pointer
  /// @param[in] data raw audio data, should point to an array of 16-bit signed
  /// integers in native byte-order
  /// @param[in] size size of the data buffer (in samples)
  ///
  /// @return 0 on error, 1 on success
  int chromaprint_feed(
    ffi.Pointer<ChromaprintContext> ctx,
    ffi.Pointer<ffi.Int16> data,
    int size,
  ) {
    return _chromaprint_feed(
      ctx,
      data,
      size,
    );
  }

  late final _chromaprint_feedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ChromaprintContext>,
              ffi.Pointer<ffi.Int16>, ffi.Int)>>('chromaprint_feed');
  late final _chromaprint_feed = _chromaprint_feedPtr.asFunction<
      int Function(
          ffi.Pointer<ChromaprintContext>, ffi.Pointer<ffi.Int16>, int)>();

  /// Process any remaining buffered audio data.
  ///
  /// @param[in] ctx Chromaprint context pointer
  ///
  /// @return 0 on error, 1 on success
  int chromaprint_finish(
    ffi.Pointer<ChromaprintContext> ctx,
  ) {
    return _chromaprint_finish(
      ctx,
    );
  }

  late final _chromaprint_finishPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ChromaprintContext>)>>(
      'chromaprint_finish');
  late final _chromaprint_finish = _chromaprint_finishPtr
      .asFunction<int Function(ffi.Pointer<ChromaprintContext>)>();

  /// Return the calculated fingerprint as a compressed string.
  ///
  /// The caller is responsible for freeing the returned pointer using
  /// chromaprint_dealloc().
  ///
  /// @param[in] ctx Chromaprint context pointer
  /// @param[out] fingerprint pointer to a pointer, where a pointer to the allocated array
  /// will be stored
  ///
  /// @return 0 on error, 1 on success
  int chromaprint_get_fingerprint(
    ffi.Pointer<ChromaprintContext> ctx,
    ffi.Pointer<ffi.Pointer<ffi.Char>> fingerprint,
  ) {
    return _chromaprint_get_fingerprint(
      ctx,
      fingerprint,
    );
  }
